--- a/Playground.ipynb
+++ b/Playground.ipynb
@@ -10,14 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, July!\n"
+      "Lyn\n",
+      "Hello, Lyn!\n"
      ]
     }
    ],
@@ -25,11 +28,45 @@
     "your_name = input()\n",
     "print('Hello, ' + your_name + '!')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "诶，用手机也行（打滚）\n",
+    "可爱捏"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "July\n",
+      "July is a cute kitty!\n"
+     ]
+    }
+   ],
+   "source": [
+    "your_name = input()\n",
+    "print(your_name + ' '+'is a cute kitty!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -43,9 +80,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.8.10"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "25b59ed3ca0deeda112f3ca5528f339f6efe48947572ebc8fcd16263b4164db2"
